Revision history for Perl extension AnyEvent.

        - fix a bug in the pure perl backend that kept watchers alive
          when multiple watchers were registered for the same fh/poll combo.
	- add a benchmark section showing AnyEvent overhead and comparing
          the different event loops with each other.
        - prefer pure perl over tk when autoprobing, as it's about as fast,
          but doesn't crash with many watchers.
	- make Qt support non-experimental.
        - clarify the confusing section about the file descriptor being
          kept alive.
        - document the race between loading of an event module and
          child processes exiting.
        - support POE as "backend" (with some caveats, POE is not generic
          enough, and darn slow).
        - support Wx and Prima through POE.
        - optimise perl backend to use 20% less memory and take advantage
          of typical timeout behaviour.  It can now compete with
          select/poll-based C event loops in most cases (it is usually
          faster than Event and Glib :).
        - roughly cut EV memory use in half and increase its speed by 30%,
          by removing undocumented functionality.

3.2  Thu Apr 24 10:10:40 CEST 2008
	- do not die when anyevent watchers are destroyed while running callbacks
          in the pureperl backend (could only happen when two watchers are registered
          for the same fh/poll combo).
        - support autoloading for child watchers, was broken in all versions.
	- implement PERL_ANYEVENT_MODEL env variable.
        - (experimental) implement interface to the (very crashy/buggy) Event::Lib module.
        - (experimental) implement interface to the Qt module (cannot be autoprobed).
        - this release is IO:AnyEvent-proof.

3.12 Tue Apr 22 07:11:46 CEST 2008
	- reinstate AUTHOR section that got lost somehow.
        - do not hang in the testsuite with badly broken perls (activestate,